[gd_scene load_steps=29 format=2]

[ext_resource path="res://assets/enimies/worm/walk_02.png" type="Texture" id=1]
[ext_resource path="res://assets/enimies/worm/walk_03.png" type="Texture" id=2]
[ext_resource path="res://assets/enimies/worm/attack_08.png" type="Texture" id=3]
[ext_resource path="res://assets/enimies/worm/attack_06.png" type="Texture" id=4]
[ext_resource path="res://assets/enimies/worm/attack_09.png" type="Texture" id=5]
[ext_resource path="res://assets/enimies/worm/walk_04.png" type="Texture" id=6]
[ext_resource path="res://assets/enimies/worm/walk_06.png" type="Texture" id=7]
[ext_resource path="res://assets/enimies/worm/walk_05.png" type="Texture" id=8]
[ext_resource path="res://assets/enimies/worm/walk_01.png" type="Texture" id=9]
[ext_resource path="res://assets/enimies/worm/attack_02.png" type="Texture" id=10]
[ext_resource path="res://assets/enimies/worm/walk_07.png" type="Texture" id=11]
[ext_resource path="res://assets/enimies/worm/walk_09.png" type="Texture" id=12]
[ext_resource path="res://assets/enimies/worm/attack_01.png" type="Texture" id=13]
[ext_resource path="res://assets/enimies/worm/walk_08.png" type="Texture" id=14]
[ext_resource path="res://assets/enimies/worm/attack_03.png" type="Texture" id=15]
[ext_resource path="res://assets/enimies/worm/attack_07.png" type="Texture" id=16]
[ext_resource path="res://assets/enimies/worm/attack_04.png" type="Texture" id=17]
[ext_resource path="res://assets/enimies/worm/attack_05.png" type="Texture" id=18]
[ext_resource path="res://src/actors/WormOne.gd" type="Script" id=19]
[ext_resource path="res://assets/music/Звук, где червяк выползает из плоти.ogg" type="AudioStream" id=20]
[ext_resource path="res://assets/music/Звук шипения червя.ogg" type="AudioStream" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 13 ), ExtResource( 10 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 4 ), ExtResource( 16 ), ExtResource( 3 ), ExtResource( 5 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 6 ), ExtResource( 8 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 14 ), ExtResource( 12 ) ],
"loop": false,
"name": "walk",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 26.2482, 24.9405 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 58.4434, 19.505 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 174.263, 19.505 )

[sub_resource type="Animation" id=5]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "attack", "attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitBox/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("AudioAttack")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 8 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "walk", "walk" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioEnter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[sub_resource type="Animation" id=7]
resource_name = "walk_back"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "walk", "walk" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 8, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("AudioEnter")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
}, {
"args": [  ],
"method": "stop"
} ]
}

[node name="WormOne" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 9
script = ExtResource( 19 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "walk"
offset = Vector2( -11.4063, -25.2847 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -18.3973, -24.6691 )
shape = SubResource( 2 )
disabled = true

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2( 0, -16.7248 )
shape = SubResource( 4 )

[node name="ScanBox" type="Area2D" parent="."]
monitorable = false
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="ScanBox"]
position = Vector2( 0, -16.7248 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 5 )
anims/walk = SubResource( 6 )
anims/walk_back = SubResource( 7 )

[node name="AudioEnter" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[node name="AudioAttack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="ScanBox" to="." method="_on_ScanBox_body_entered"]
[connection signal="body_exited" from="ScanBox" to="." method="_on_ScanBox_body_exited"]
